Sửa đổi chức năng trang web, bỏ blog và contact đi, thay vào đó là chức năng thuê xe tự lái và đăng nhập.

--- a/views/hotel.hbs
+++ b/views/hotel.hbs
@@ -1,3 +1,6 @@
+<head>
+    <title>{{{title}}}</title>
+</head>
 <div class="hero-wrap js-fullheight" style="background-image: url('images/bg_1.jpg');">
     <div class="overlay"></div>
     <div class="container">
