--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{{{title}}}</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -42,8 +41,8 @@
                       <li class="nav-item"><a href="/about" class="nav-link">About</a></li>
                       <li class="nav-item"><a href="/places" class="nav-link">Places</a></li>
                       <li class="nav-item"><a href="/hotel" class="nav-link">Hotels</a></li>
-                      <li class="nav-item"><a href="/blog" class="nav-link">Blog</a></li>
-                      <li class="nav-item"><a href="/contact" class="nav-link">Contact</a></li>
+                      <li class="nav-item"><a href="/car_rent" class="nav-link">Car Rent</a></li>
+                      <li class="nav-item"><a href="/signin_signout" class="nav-link">Sign in</a></li>
                   </ul>
               </div>
           </div>
