--- a/views/places.hbs
+++ b/views/places.hbs
@@ -1,3 +1,6 @@
+<head>
+    <title>{{{title}}}</title>
+</head>
 <div class="hero-wrap js-fullheight" style="background-image: url('images/bg_1.jpg');">
     <div class="overlay"></div>
     <div class="container">
