--- a/views/places.hbs
+++ b/views/places.hbs
@@ -1,7 +1,7 @@
 <head>
     <title>{{{title}}}</title>
 </head>
-<div class="hero-wrap js-fullheight" style="background-image: url('images/bg_1.jpg');">
+<div class="hero-wrap js-fullheight" style="background-image: url('{{background}}');">
     <div class="overlay"></div>
     <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center" data-scrollax-parent="true">
