Kết nối database và đã lưu tour được Cần cải thiện thêm

--- a/project/views/admin/Manage/AddTour.hbs
+++ b/project/views/admin/Manage/AddTour.hbs
@@ -207,8 +207,9 @@
             <li class="breadcrumb-item active">Thêm tour</li>
         </ol>
 
-
-        <form class="form-tao-tour" id="tourForm" enctype="multipart/form-data">
+<!--        enctype="multipart/form-data"-->
+        <form   action="/admin/addtour" method="post"
+                class="form-tao-tour" id="tourForm" >
         <h1>TẠO TOUR</h1>
 
         <div class="ttcb">
