--- a/project/views/home/index.hbs
+++ b/project/views/home/index.hbs
@@ -128,125 +128,52 @@
 </section>
 
 <!--Popular Places-->
-<!--
-<section class="ftco-section">
-    <div class="container">
-        <div class="row justify-content-center mb-5 pb-3">
-            <div class="col-md-7 heading-section text-center ftco-animate">
-                <h2 class="mb-4">Những chuyến đi phổ biến nhất</h2>
-            </div>
-        </div>
-    </div>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-sm col-md-6 col-lg ftco-animate">
-                <div class="destination">
-                    <a href="#" class="img img-2 d-flex justify-content-center align-items-center" style="background-image: url(images/popular-places/vung-tau.jpg);">
-                        <div class="icon d-flex justify-content-center align-items-center">
-                            <span class="icon-link"></span>
-                        </div>
-                    </a>
-                    <div class="text p-3">
-                        <div class="d-flex">
-                            <div class="one">
-                                <h3><a href="#">Vũng Tàu</a></h3>
-                            </div>
-                            <div class="two">
-                                <span class="price">1.700.000đ</span>
-                            </div>
-                        </div>
-                        <p>Du lịch biển với những bãi tắm sạch, nghỉ ngơi tại khách sạn cao cấp</p>
-                        <p class="days"><span>2 ngày 3 đêm</span></p>
-                        <hr>
-                        <p class="bottom-area d-flex">
-                            <span><i class="icon-map-o"></i> Bà Rịa Vũng Tàu</span>
-                            <span class="ml-auto"><a href="#">Xem chi tiết</a></span>
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm col-md-6 col-lg ftco-animate">
-                <div class="destination d-md-flex flex-column-reverse">
-                    <a href="#" class="img img-2 d-flex justify-content-center align-items-center" style="background-image: url(images/popular-places/phu-quoc.jpg);">
-                        <div class="icon d-flex justify-content-center align-items-center">
-                            <span class="icon-link"></span>
-                        </div>
-                    </a>
-                    <div class="text p-3">
-                        <div class="d-flex">
-                            <div class="one">
-                                <h3><a href="#">Phú Quốc</a></h3>
-                            </div>
-                            <div class="two">
-                                <span class="price">3.700.000đ</span>
-                            </div>
-                        </div>
-                        <p>Thiên đường biển xanh, cát trắng, nghỉ dưỡng sang trọng, trải nghiệm đẳng cấp</p>
-                        <p class="days"><span>3 ngày 4 đêm</span></p>
-                        <hr>
-                        <p class="bottom-area d-flex">
-                            <span><i class="icon-map-o"></i> Phú Quốc</span>
-                            <span class="ml-auto"><a href="#">Xem chi tiết</a></span>
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm col-md-6 col-lg ftco-animate">
-                <div class="destination">
-                    <a href="#" class="img img-2 d-flex justify-content-center align-items-center" style="background-image: url(images/popular-places/ben-tre.jpg);">
-                        <div class="icon d-flex justify-content-center align-items-center">
-                            <span class="icon-link"></span>
-                        </div>
-                    </a>
-                    <div class="text p-3">
-                        <div class="d-flex">
-                            <div class="one">
-                                <h3><a href="#">Bến Tre</a></h3>
-                            </div>
-                            <div class="two">
-                                <span class="price">2.000.000đ</span>
-                            </div>
-                        </div>
-                        <p>Xứ dừa yên bình, sông nước hữu tình, trải nghiệm miền Tây dân dã</p>
-                        <p class="days"><span>1 ngày 2 đêm</span></p>
-                        <hr>
-                        <p class="bottom-area d-flex">
-                            <span><i class="icon-map-o"></i> Bến Tre</span>
-                            <span class="ml-auto"><a href="#">Xem chi tiết</a></span>
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm col-md-6 col-lg ftco-animate">
-                <div class="destination d-md-flex flex-column-reverse">
-                    <a href="#" class="img img-2 d-flex justify-content-center align-items-center" style="background-image: url(images/popular-places/da-lat.jpg);">
-                        <div class="icon d-flex justify-content-center align-items-center">
-                            <span class="icon-link"></span>
-                        </div>
-                    </a>
-                    <div class="text p-3">
-                        <div class="d-flex">
-                            <div class="one">
-                                <h3><a href="#">Đà Lạt</a></h3>
-                            </div>
-                            <div class="two">
-                                <span class="price">5.200.000đ</span>
-                            </div>
-                        </div>
-                        <p>Thành phố sương mù, hoa nở quanh năm, khí hậu mát lạnh, lãng mạn</p>
-                        <p class="days"><span>3 ngày 4 đêm</span></p>
-                        <hr>
-                        <p class="bottom-area d-flex">
-                            <span><i class="icon-map-o"></i> Đà Lạt</span>
-                            <span class="ml-auto"><a href="#">Xem chi tiết</a></span>
-                        </p>
-                    </div>
+{{#if numTours}}
+    <section class="ftco-section">
+        <div class="container">
+            <div class="row justify-content-center mb-5 pb-3">
+                <div class="col-md-7 heading-section text-center ftco-animate">
+                    <h2 class="mb-4">Những chuyến đi phổ biến nhất</h2>
                 </div>
             </div>
         </div>
-    </div>
-</section>
--->
+        <div class="container-fluid">
+            <div class="row">
+                {{#each popularTours}}
+                    <div class="col-sm col-md-6 col-lg ftco-animate">
+                        <div class="destination {{#if @index}}{{#if (isOdd @index)}}d-md-flex flex-column-reverse{{/if}}{{/if}}">
+                            <a href="#" class="img img-2 d-flex justify-content-center align-items-center" style="background-image: url('/uploads/{{hinhdaidien}}');">
+                                <div class="icon d-flex justify-content-center align-items-center">
+                                    <span class="icon-link"></span>
+                                </div>
+                            </a>
+                            <div class="text p-3">
+                                <div class="d-flex">
+                                    <div class="one">
+                                        <h3><a href="#">{{tentour}}</a></h3>
+                                    </div>
+                                    <div class="two">
+                                        <span class="price">{{giavenguoilon}}đ</span>
+                                    </div>
+                                </div>
+                                <p>{{motangan}}</p>
+                                <p class="days"><span>{{thoiluong}}</span></p>
+                                <hr>
+                                <p class="bottom-area d-flex">
+                                    <span><i class="icon-map-o"></i> {{diemden}}</span>
+                                    <span class="ml-auto"><a href="#">Xem chi tiết</a></span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                {{/each}}
+            </div>
+        </div>
+    </section>
+{{/if}}
+
+
+
 
 
 <!--Thống kê-->
